--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "prettier": "^2.8.2",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.6",
     "jest": "^29.3.1"
   }
 }
